ダイアログの見た目調整

--- a/Yukari/src/main/assets/about.html
+++ b/Yukari/src/main/assets/about.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h1>Yukari for Android</h1>
-<p>Developed by <a href="http://twitter.com/shibafu528">@shibafu528</a>
+<p>Developed by @shibafu528
 <p>Yukari は複数アカウントを同時使用したUserstreamに対応したTwitterクライアントです。<br>プロトタイプ版なので機能が足りていません。
-<p>バグや質問等のお問い合わせは<a href="http://twitter.com/shibafu528">@shibafu528</a>で受け付けています。
+<p>バグや質問等のお問い合わせは<a href="http://twitter.com/yukari4a">@yukari4a</a>で受け付けています。
 <hr>
 <h1>Open Source Licenses</h1>
 <h1>Twitter4J</h1>
