--- a/Yukari/src/main/assets/about.html
+++ b/Yukari/src/main/assets/about.html
@@ -1,116 +1,118 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>アプリについて</title>
+    <meta charset="UTF-8">
+    <title>アプリについて</title>
 </head>
 <body>
 <h1>Yukari for Android</h1>
 <p>Developed by @shibafu528
-<p>Yukari は複数アカウントを同時使用したUserstreamに対応したTwitterクライアントです。<br>プロトタイプ版なので機能が足りていません。
+<p>Yukari は複数アカウントを同時使用したUserStreamに対応したTwitterクライアントです。
 <p>バグや質問等のお問い合わせは<a href="http://twitter.com/yukari4a">@yukari4a</a>で受け付けています。
 <hr>
 <h1>Open Source Licenses</h1>
-<h1>Twitter4J</h1>
-<p>Copyright 2007 Yusuke Yamamoto</p>
+<ul>
+    <li>Twitter4J</li>
+    <li>support-v4</li>
+    <li>appcompat-v7</li>
+    <li>android-betterpickers</li>
+    <li>ButterKnife</li>
+    <li>Gson</li>
+    <li>HoloColorPicker</li>
+    <li>LeakCanary</li>
+    <li>Lightweight-Stream-API</li>
+    <li>NineOldAndroids</li>
+    <li>PreferenceFragment-Compat</li>
+    <li>Twitter Intent</li>
+    <li>twitter-text</li>
+    <li>Zxing</li>
+</ul>
 <p>Licensed under the Apache License, Version 2.0 (the "License");<br>
-you may not use this file except in compliance with the License.<br>
-You may obtain a copy of the License at<br></p>
+    you may not use this file except in compliance with the License.<br>
+    You may obtain a copy of the License at<br></p>
 <p><a href="#apache">http://www.apache.org/licenses/LICENSE-2.0</a></p>
 <p>Unless required by applicable law or agreed to in writing, software<br>
-distributed under the License is distributed on an "AS IS" BASIS,<br>
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.<br>
-See the License for the specific language governing permissions and<br>
-limitations under the License.</p>
-
-<h1>Android Smart Image View</h1>
-<p>Copyright 2011 James Smith</p>
-<p>Licensed under the Apache License, Version 2.0 (the "License");<br>
-you may not use this file except in compliance with the License.<br>
-You may obtain a copy of the License at<br></p>
-<p><a href="#apache">http://www.apache.org/licenses/LICENSE-2.0</a></p>
-<p>Unless required by applicable law or agreed to in writing, software<br>
-distributed under the License is distributed on an "AS IS" BASIS,<br>
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.<br>
-See the License for the specific language governing permissions and<br>
-limitations under the License.</p>
+    distributed under the License is distributed on an "AS IS" BASIS,<br>
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.<br>
+    See the License for the specific language governing permissions and<br>
+    limitations under the License.</p>
 
 <h1>VLGothic Font Family</h1>
 <p>Copyright (c) 1990-2003 Wada Laboratory, the University of Tokyo.<br>
-Copyright (c) 2003-2004 Electronic Font Open Laboratory (/efont/).<br>
-Copyright (C) 2002-2013 M+ FONTS PROJECT<br>
-Copyright (C) 2006-2013 Daisuke SUZUKI &lt;daisuke@vinelinux.org&gt;.<br>
-Copyright (C) 2006-2013 Project Vine &lt;Vine@vinelinux.org&gt;.<br>
-All rights reserved.
+    Copyright (c) 2003-2004 Electronic Font Open Laboratory (/efont/).<br>
+    Copyright (C) 2002-2013 M+ FONTS PROJECT<br>
+    Copyright (C) 2006-2013 Daisuke SUZUKI &lt;daisuke@vinelinux.org&gt;.<br>
+    Copyright (C) 2006-2013 Project Vine &lt;Vine@vinelinux.org&gt;.<br>
+    All rights reserved.
 </p>
-
 <p>
-Redistribution and use in source and binary forms, with or without<br>
-modification, are permitted provided that the following conditions<br>
-are met:<br>
-1. Redistributions of source code must retain the above copyright notice,<br>
-this list of conditions and the following disclaimer.<br>
-2. Redistributions in binary form must reproduce the above copyright notice,<br>
-this list of conditions and the following disclaimer in the documentation<br>
-and/or other materials provided with the distribution.<br>
-3. Neither the name of the Wada Laboratory, the University of Tokyo nor<br>
-the names of its contributors may be used to endorse or promote products<br>
-derived from this software without specific prior written permission.<br>
-</p><p>
-THIS SOFTWARE IS PROVIDED BY WADA LABORATORY, THE UNIVERSITY OF TOKYO AND<br>
-CONTRIBUTORS ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT<br>
-NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A<br>
-PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE LABORATORY OR<br>
-CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,<br>
-EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,<br>
-PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;<br>
-OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,<br>
-WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR<br>
-OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF<br>
-ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+    Redistribution and use in source and binary forms, with or without<br>
+    modification, are permitted provided that the following conditions<br>
+    are met:<br>
+    1. Redistributions of source code must retain the above copyright notice,<br>
+    this list of conditions and the following disclaimer.<br>
+    2. Redistributions in binary form must reproduce the above copyright notice,<br>
+    this list of conditions and the following disclaimer in the documentation<br>
+    and/or other materials provided with the distribution.<br>
+    3. Neither the name of the Wada Laboratory, the University of Tokyo nor<br>
+    the names of its contributors may be used to endorse or promote products<br>
+    derived from this software without specific prior written permission.<br>
+</p>
+<p>
+    THIS SOFTWARE IS PROVIDED BY WADA LABORATORY, THE UNIVERSITY OF TOKYO AND<br>
+    CONTRIBUTORS ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT<br>
+    NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A<br>
+    PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE LABORATORY OR<br>
+    CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,<br>
+    EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,<br>
+    PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;<br>
+    OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,<br>
+    WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR<br>
+    OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF<br>
+    ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 </p>
 
 <h1>M+ FONTS</h1>
 <p>Copyright (C) 2002-2012 M+ FONTS PROJECT</p>
 <p>
-These fonts are free software.<br>
-Unlimited permission is granted to use, copy, and distribute them, with<br>
-or without modification, either commercially or noncommercially.<br>
-THESE FONTS ARE PROVIDED "AS IS" WITHOUT WARRANTY.<br>
-<br>
-<a href="http://mplus-fonts.sourceforge.jp/mplus-outline-fonts/">http://mplus-fonts.sourceforge.jp/mplus-outline-fonts/</a>
+    These fonts are free software.<br>
+    Unlimited permission is granted to use, copy, and distribute them, with<br>
+    or without modification, either commercially or noncommercially.<br>
+    THESE FONTS ARE PROVIDED "AS IS" WITHOUT WARRANTY.<br>
+    <br>
+    <a href="http://mplus-fonts.sourceforge.jp/mplus-outline-fonts/">http://mplus-fonts.sourceforge.jp/mplus-outline-fonts/</a>
 </p>
 
 <h1>Sazanami</h1>
 <p>
-Copyright (c) 1990-2003<br>
-Wada Laboratory, the University of Tokyo. All rights reserved.<br>
-Copyright (c) 2003-2004<br>
-Electronic Font Open Laboratory (/efont/). All rights reserved.<br>
-<br>
-Redistribution and use in source and binary forms, with or without<br>
-modification, are permitted provided that the following conditions<br>
-are met:<br>
-1. Redistributions of source code must retain the above copyright notice,<br>
-this list of conditions and the following disclaimer.<br>
-2. Redistributions in binary form must reproduce the above copyright notice,<br>
-this list of conditions and the following disclaimer in the documentation<br>
-and/or other materials provided with the distribution.<br>
-3. Neither the name of the Wada Laboratory, the University of Tokyo nor<br>
-the names of its contributors may be used to endorse or promote products<br>
-derived from this software without specific prior written permission.<br>
-<br>
-THIS SOFTWARE IS PROVIDED BY WADA LABORATORY, THE UNIVERSITY OF TOKYO AND<br>
-CONTRIBUTORS ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT<br>
-NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A<br>
-PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE LABORATORY OR<br>
-CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,<br>
-EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,<br>
-PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;<br>
-OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,<br>
-WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR<br>
-OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF<br>
-ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+    Copyright (c) 1990-2003<br>
+    Wada Laboratory, the University of Tokyo. All rights reserved.<br>
+    Copyright (c) 2003-2004<br>
+    Electronic Font Open Laboratory (/efont/). All rights reserved.<br>
+    <br>
+    Redistribution and use in source and binary forms, with or without<br>
+    modification, are permitted provided that the following conditions<br>
+    are met:<br>
+    1. Redistributions of source code must retain the above copyright notice,<br>
+    this list of conditions and the following disclaimer.<br>
+    2. Redistributions in binary form must reproduce the above copyright notice,<br>
+    this list of conditions and the following disclaimer in the documentation<br>
+    and/or other materials provided with the distribution.<br>
+    3. Neither the name of the Wada Laboratory, the University of Tokyo nor<br>
+    the names of its contributors may be used to endorse or promote products<br>
+    derived from this software without specific prior written permission.<br>
+    <br>
+    THIS SOFTWARE IS PROVIDED BY WADA LABORATORY, THE UNIVERSITY OF TOKYO AND<br>
+    CONTRIBUTORS ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT<br>
+    NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A<br>
+    PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE LABORATORY OR<br>
+    CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,<br>
+    EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,<br>
+    PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;<br>
+    OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,<br>
+    WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR<br>
+    OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF<br>
+    ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 </p>
 
 <h1 id="apache">Apache License, Version 2.0</h1>
