--- a/manual.html
+++ b/manual.html
@@ -15,7 +15,7 @@
         <![endif]-->
 
         <!-- Web Fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Poiret+One|Muli' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Poiret+One|Muli' rel='stylesheet' type='text/css'>
 
         <link href="css/main.css" rel="stylesheet" type="text/css">
     </head>
