--- a/Yukari/src/main/assets/about.html
+++ b/Yukari/src/main/assets/about.html
@@ -46,6 +46,7 @@
     <li>LeakCanary</li>
     <li>Lightweight-Stream-API</li>
     <li>Open Sans</li>
+    <li>PermissionsDispatcher</li>
     <li>PreferenceFragment-Compat</li>
     <li>Twitter Intent</li>
     <li>twitter-text</li>
