--- a/Yukari/src/main/assets/about.html
+++ b/Yukari/src/main/assets/about.html
@@ -44,6 +44,7 @@
     <li>HoloColorPicker</li>
     <li>LeakCanary</li>
     <li>Lightweight-Stream-API</li>
+    <li>PermissionsDispatcher</li>
     <li>PreferenceFragment-Compat</li>
     <li>Twitter Intent</li>
     <li>twitter-text</li>
