--- a/Yukari/src/main/assets/about.html
+++ b/Yukari/src/main/assets/about.html
@@ -30,8 +30,8 @@
     <p>Developed by <a href="https://twitter.com/shibafu528">@shibafu528</a>
 </header>
 <div class="content">
-<p>Yukari は複数アカウントを同時使用したUserStreamに対応したTwitterクライアントです。
-<p>バグや質問等のお問い合わせは<a href="http://twitter.com/yukari4a">@yukari4a</a>で受け付けています。
+<p>Yukari はTwitterやMastodonのマルチアカウント利用に対応したSNSクライアントアプリです。
+<p>バグや質問等のお問い合わせは<a href="https://twitter.com/yukari4a">@yukari4a (Twitter)</a>または<a href="https://ertona.net/@yukari4a">@yukari4a@ertona.net (Mastodon)</a>で受け付けています。
 <hr>
 <h1>Open Source Licenses</h1>
 <ul>
@@ -48,6 +48,7 @@
     <li>Open Sans</li>
     <li>PermissionsDispatcher</li>
     <li>PreferenceFragment-Compat</li>
+    <li>ThreeTen Android Backport</li>
     <li>Twitter Intent</li>
     <li>twitter-text</li>
     <li>Zxing</li>
