aboutにちょっと書き足し

--- a/Yukari/src/main/assets/about.html
+++ b/Yukari/src/main/assets/about.html
@@ -32,6 +32,7 @@
 <div class="content">
 <p>Yukari はTwitterやMastodonのマルチアカウント利用に対応したSNSクライアントアプリです。
 <p>バグや質問等のお問い合わせは<a href="https://twitter.com/yukari4a">@yukari4a (Twitter)</a>または<a href="https://ertona.net/@yukari4a">@yukari4a@ertona.net (Mastodon)</a>で受け付けています。
+<p>このアプリは <a href="#apache">Apache License, Version 2.0</a> でライセンスされたオープンソースソフトウェアです。
 <hr>
 <h1>Open Source Licenses</h1>
 <ul>
