--- a/manual.html
+++ b/manual.html
@@ -43,7 +43,7 @@
 
         <div class="container">
             <div class="alert alert-warning" role="alert">
-                <strong>このページは2014年以降更新されていません。</strong> 最新のドキュメントは <a href="https://bitbucket.org/shibafu528/yukari-for-android/wiki/%E5%AD%98%E5%9C%A8%E3%81%8C%E5%88%86%E3%81%8B%E3%82%8A%E3%81%AB%E3%81%8F%E3%81%84%E6%A9%9F%E8%83%BD">こちら</a> で公開しています。
+                <strong>このページは2014年以降更新されていません。</strong> 最新のドキュメントは <a href="https://github.com/shibafu528/Yukari/wiki">こちら</a> で公開しています。
             </div>
 
             <div class="page-header">
