Twitterって何だっけ

--- a/Yukari/src/main/assets/about.html
+++ b/Yukari/src/main/assets/about.html
@@ -30,7 +30,7 @@
     <p>Developed by <a href="https://twitter.com/shibafu528">@shibafu528</a>
 </header>
 <div class="content">
-<p>Yukari はTwitterやMastodonのマルチアカウント利用に対応したSNSクライアントアプリです。
+<p>Yukari はMastodonのマルチアカウント利用に対応したSNSクライアントアプリです。
 <p>バグや質問等のお問い合わせは<a href="https://twitter.com/yukari4a">@yukari4a (Twitter)</a>または<a href="https://ertona.net/@yukari4a">@yukari4a@ertona.net (Mastodon)</a>で受け付けています。
 <p>このアプリは <a href="#apache">Apache License, Version 2.0</a> でライセンスされたオープンソースソフトウェアです。
 <hr>
